unpackaged/main/default/objects/KCSArticle_ViewStat__c/KCSArticle_ViewStat__c.object-meta.xml
<CustomObject>
    <description>Used by Service Analytics v6+ Analytics App install. Do not remove.</description>
    <label>KCSArticle_ViewStat__c</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>KCSArticle_ViewStat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KCSArticle_ViewStat__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>