unpackaged/main/default/objects/KCSArticle_ViewStat__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>