unpackaged/main/default/objects/KCSArticle_ViewStat__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <externalId>true</externalId>
    <label>Parent ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>