unpackaged/main/default/objects/KCSArticle_ViewStat__c/fields/ViewCount__c.field-meta.xml
<CustomField>
    <fullName>ViewCount__c</fullName>
    <label>ViewCount</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>